--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Our implementation of a robotic car using the Robocard-card.
 See http://robocard.dk/ for more information on Robocard.
 
-Nis Sarup & Klays Kryhlmand
+Nis Sarup <nis@sarup.dk> & Klays Kryhlmand
